<resources>
    <string name="app_name">League Pulse</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="get_trending_reddit_php_url" translatable="false">http://leaguepulsereddit-env.pggnwbfn7t.us-west-1.elasticbeanstalk.com/get-trendingredditdata-json1.php</string>
    <string name="logo">logo</string>
    <string name="trending">Trending</string>
    <string name="alerts">Alerts</string>
    <string name="open_on_reddit">Open on Reddit</string>
    <string name="open_on_twitter">Open on Twitter</string>
    <string name="logo_for_the_pro_region">Logo for the pro region</string>
    <string name="vs">vs</string>
    <string name="reddit_alerts">Reddit Alerts</string>
    <string name="all_trending_posts">All Trending posts</string>
    <string name="top_trending_posts_less_notifications">Top Trending Posts (Fewer Notifications)</string>
    <string name="twitter_alerts">Twitter Alerts</string>
    <string name="all_trending_tweets">All Trending Tweets</string>
    <string name="top_trending_tweets_less_notifications">Top Trending Tweets (Fewer Notifications)</string>
    <string name="receive_reddit_notifications">Receive Trending Reddit Posts Notifications</string>
    <string name="receive_tweets_from_na_related_accounts">Receive Tweets from NA related accounts</string>
    <string name="receive_tweets_from_eu_related_accounts">Receive Tweets From EU Related Accounts</string>
    <string name="receive_match_results_notifications">Receive Match Results Notifications</string>
    <string name="receive_twitter_notifications">Receive Trending Tweet Notifications</string>
    <string name="turn_off_reddit_notifications">Turn off Reddit Notifications</string>
    <string name="turn_off_tweet_notifications">Turn off Tweet Notifications</string>
    <string name="turn_off_match_results_notifications">Turn off Match Results Notifications</string>
    <string name="open_match_details">Open Match Details</string>
    <string name="tap_to_see_winner">Tap to see winner</string>
    <string name="bigger_version_of_image_tapped">Bigger version of image tapped</string>
    <string name="back_arrow">back arrow</string>
    <string name="download_icon">Download Icon</string>
    <string name="lp_logo">LP Logo</string>

    <string name="about_league_pulse">League Pulse is a League of Legends content and news aggregator that
        primarily targets content that is receiving higher than average engagement from Twitter
        and Reddit.</string>
    <string name="coming_soon_text">Coming soon:   Youtube Trending Content Twitch \nTrending Content Ability to comment on Reddit posts from app Ability to reply to Tweets from app Ability to filter trending list Track more subreddits and Twitter accounts Night Mode</string>
    <string name="contact">Contact: info@leaguepulse.us</string>
    <string name="send_bug_report">Send bug report</string>
    <string name="submit_a_suggestion">Submit a suggestion</string>
    <string name="feedback_or_suggestions_are_appreciated">Feedback or suggestions are appreciated!</string>
    <string name="enable_night_mode">Enable night mode</string>
    <string name="filter">Filter</string>
    <string name="search">Search...</string>
    <string name="twitter">Twitter</string>
    <string name="reddit">Reddit</string>
    <string name="settings">Settings</string>
    <string name="share_button">Share Button</string>
    <string name="Sample_date">27-Apr-19 04:46 PM</string>
    <string name="open">Open</string>
    <string-array name="filter_spinner">
        <item>All</item>
        <item>Twitter</item>
        <item>Reddit</item>
    </string-array>

</resources>
