<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:importantForAutofill="no"
        android:inputType="textCapSentences" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/twitter_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/reddit_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reddit" />
</LinearLayout>