<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333">

    <ImageView
        android:id="@+id/back_arrow_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/back_arrow"
        android:src="@drawable/back_arrow"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/download_icon_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="9dp"
        android:contentDescription="@string/download_icon"
        android:src="@drawable/download_icon"
       android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/back_arrow_img" />

        <ImageView
            android:id="@+id/big_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/divider1"
            android:contentDescription="@string/bigger_version_of_image_tapped" />
</RelativeLayout>